# plak

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/: build.yml
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/icons/: icon-macos.icns
app/src/desktopMain/kotlin/me/budchirp/plak/: Constants.kt  main.kt
app/src/desktopMain/kotlin/me/budchirp/plak/data/manager/: AccountManager.kt  ConfigManager.kt  InstanceManager.kt  MinecraftManager.kt
app/src/desktopMain/kotlin/me/budchirp/plak/data/model/: Account.kt  Config.kt  Fabric.kt  Instance.kt  Loader.kt  Minecraft.kt
app/src/desktopMain/kotlin/me/budchirp/plak/ui/: app.kt
app/src/desktopMain/kotlin/me/budchirp/plak/ui/composition/: ProvideNavController.kt  ProvideSnackbarHostState.kt
app/src/desktopMain/kotlin/me/budchirp/plak/ui/layout/: AppLayout.kt  AppWindow.kt  Drawer.kt  Layout.kt  TitleBar.kt
app/src/desktopMain/kotlin/me/budchirp/plak/ui/navigation/: AppNavHost.kt
app/src/desktopMain/kotlin/me/budchirp/plak/utils/: Commands.kt  FS.kt  Init.kt  JSON.kt  Network.kt  OS.kt
gradle/: libs.versions.toml
src/: app.rs  command_line.rs  constants.rs  init.rs  main.rs  minecraft.rs  network.rs  schema.rs  toml.rs  window.rs
src/config/: instance_config.rs  mod.rs  user_config.rs
src/ui/: mod.rs  ui.css
src/ui/common/: show_about.rs
src/ui/main_window/: content_page.rs  mod.rs  sidebar_page.rs
src/ui/main_window/dialogs/: add_instance_dialog.rs  mod.rs
src/ui/main_window/views/: instance_view.rs  mod.rs
(+24 files in other folders)
